@startuml Electronic_Department_System_Simple

title Electronic Department System - Architecture
note top : Developer: Herman Likyanov

package "Entities" {
    class User {
        -Long id
        -String username
        -String password
        -String email
        -String firstName
        -String lastName
        -UserRole role
        -Boolean isActive
    }

    class Student {
        -Long id
        -User user
        -String studentNumber
        -Integer enrollmentYear
        -StudentGroup group
        -String phoneNumber
        -String address
    }

    class Teacher {
        -Long id
        -User user
        -String academicTitle
        -String scientificDegree
        -String departmentPosition
        -String phoneNumber
        -String officeNumber
    }

    class Subject {
        -Long id
        -String subjectName
        -String subjectCode
        -String description
        -Integer credits
        -Integer semester
        -Integer hoursTotal
    }

    class StudentGroup {
        -Long id
        -String groupName
        -Integer courseYear
        -String specialization
        -Integer startYear
        -Integer maxStudents
    }

    class Grade {
        -Long id
        -Student student
        -Teacher teacher
        -Subject subject
        -Integer gradeValue
        -String gradeType
        -String comments
        -Boolean isFinal
    }
}

package "Services" {
    class UserService {
        -UnitOfWork unitOfWork
        +findAll()
        +findById()
        +create()
        +update()
        +delete()
    }

    class StudentService {
        -UnitOfWork unitOfWork
        +findAll()
        +findByGroup()
        +create()
        +update()
    }

    class TeacherService {
        -UnitOfWork unitOfWork
        +findActiveTeachers()
        +findById()
        +create()
        +assignSubject()
    }

    class SubjectService {
        -UnitOfWork unitOfWork
        +findAll()
        +findByCode()
        +create()
        +update()
    }

    class GradeService {
        -UnitOfWork unitOfWork
        +findByStudent()
        +createGrade()
        +updateGrade()
        +calculateAverage()
    }
}

package "Controllers" {
    class UserController {
        -UserService userService
        +getAllUsers()
        +getUserById()
        +createUser()
        +updateUser()
        +deleteUser()
    }

    class PublicController {
        -TeacherService teacherService
        -SubjectService subjectService
        +getAllTeachers()
        +getTeacherById()
        +getAllSubjects()
    }

    class GradeController {
        -GradeService gradeService
        +getStudentGrades()
        +createGrade()
        +updateGrade()
    }
}

package "Data Access" {
    class UnitOfWork {
        -UserRepository userRepository
        -StudentRepository studentRepository
        -TeacherRepository teacherRepository
        -SubjectRepository subjectRepository
        -StudentGroupRepository studentGroupRepository
        -GradeRepository gradeRepository
    }
}

' Relationships
User ||--|| Student : "1:1"
User ||--|| Teacher : "1:1"
Student }o--|| StudentGroup : "many:1"
Teacher }o--o{ Subject : "many:many"
Student ||--o{ Grade : "1:many"
Teacher ||--o{ Grade : "1:many"
Subject ||--o{ Grade : "1:many"

UserController --> UserService
PublicController --> TeacherService
PublicController --> SubjectService
GradeController --> GradeService

UserService --> UnitOfWork
StudentService --> UnitOfWork
TeacherService --> UnitOfWork
SubjectService --> UnitOfWork
GradeService --> UnitOfWork

UnitOfWork --> User
UnitOfWork --> Student
UnitOfWork --> Teacher
UnitOfWork --> Subject
UnitOfWork --> StudentGroup
UnitOfWork --> Grade

note bottom of UnitOfWork : "Unit of Work pattern\nfor transaction management"

@enduml
